🎉auto update by Gmeek action

--- a/backup/总结出来的进制转换方法.md
+++ b/backup/总结出来的进制转换方法.md
@@ -1,5 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<rss xmlns:atom="http://www.w3.org/2005/Atom" xmlns:content="http://purl.org/rss/1.0/modules/content/" version="2.0"><channel><title>合集：学习C++</title><link>https://zhao-momo.github.io/LearningCPP</link><description>你好，有缘人</description><copyright>合集：学习C++</copyright><docs>http://www.rssboard.org/rss-specification</docs><generator>python-feedgen</generator><image><url>http://q1.qlogo.cn/g?b=qq&amp;nk=2092103728&amp;s=160</url><title>avatar</title><link>https://zhao-momo.github.io/LearningCPP</link></image><lastBuildDate>Sat, 15 Feb 2025 12:55:15 +0000</lastBuildDate><managingEditor>合集：学习C++</managingEditor><ttl>60</ttl><webMaster>合集：学习C++</webMaster><item><title>总结出来的进制转换方法</title><link>https://zhao-momo.github.io/LearningCPP/post/zong-jie-chu-lai-de-jin-zhi-zhuan-huan-fang-fa.html</link><description># C++进制转换笔记
+# C++进制转换笔记
 
 ## 十进制转任何进制
 
@@ -34,10 +33,10 @@ $$
 
 ```cpp
 string DecToAny(int dec, int to){
-    string res = '';
+    string res = "";
     while(dec != 0){
-        if(to &lt;= 10){
-            //是 &lt;= 10的话，那么直接加
+        if(to <= 10){
+            //是 <= 10的话，那么直接加
             res += to_string(dec % to);
         }
         else {
@@ -75,7 +74,7 @@ $$
 ```cpp
 int AnyToAny(string any, int now){
     int res = 0;
-    for(int i = 0; i &lt; any.size(); i ++)
+    for(int i = 0; i < any.size(); i ++)
         res += (any[i] - '0') * pow(now, i);
     return res;
 }
@@ -95,10 +94,9 @@ int AnyToAny(string any, int now){
 
 ```cpp
 string DecToBinary(int dec){
-    bitset&lt;50&gt; Binary(dec);
+    bitset<50> Binary(dec);
     return Binary.to_string();
 }
 ```
 
-是不是很简便？。</description><guid isPermaLink="true">https://zhao-momo.github.io/LearningCPP/post/zong-jie-chu-lai-de-jin-zhi-zhuan-huan-fang-fa.html</guid><pubDate>Sat, 15 Feb 2025 12:54:49 +0000</pubDate></item><item><title>学习C++的合集诞生了</title><link>https://zhao-momo.github.io/LearningCPP/post/xue-xi-C%2B%2B-de-he-ji-dan-sheng-le.html</link><description>今日，对于我的学习C++的合集，终于诞生了
-之后，我终于可以在这里面写东西了！。</description><guid isPermaLink="true">https://zhao-momo.github.io/LearningCPP/post/xue-xi-C%2B%2B-de-he-ji-dan-sheng-le.html</guid><pubDate>Thu, 06 Feb 2025 14:50:19 +0000</pubDate></item></channel></rss>
+是不是很简便？
